--- a/src/themes/classic-theme.scss
+++ b/src/themes/classic-theme.scss
@@ -1,17 +1,21 @@
 @import '../ui-deni-treeview.vars.scss';
 @import 'base-theme.scss';
 
-.ui-deni-treeview-item-container.classic {
-  @include set-theme($blue);
+.ui-deni-treeview-container.classic {
+  border-color: lighten($blue, 2%);
 
-  .icon-and-text {
-    .icon {
-      background-image: $closed-folder-icon-blue-16;
+  .ui-deni-treeview-item-container.classic {
+    @include set-theme($blue);
 
-      &.expanded {
-        background-image: $opened-folder-icon-blue-16;
+    .icon-and-text {
+      .icon {
+        background-image: $closed-folder-icon-blue-16;
+
+        &.expanded {
+          background-image: $opened-folder-icon-blue-16;
+        }
       }
     }
-  }
 
+  }
 }
