--- a/src/ui-deni-treeview.scss
+++ b/src/ui-deni-treeview.scss
@@ -3,6 +3,7 @@
 .ui-deni-treeview-container {
 
   font-family: tahoma,arial;
+  font-size: 12px;
   padding-top: 10px;
   padding-bottom: 10px;
   overflow-x: hidden;
